[package]
name = "advent_of_code_2020"
version = "0.1.0"
authors = ["Sander <sander@shageman.nl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.4.2"
lazy_static = "1.4.0"
vek = "0.12.1"

[dependencies.util]
path = "./util"

[workspace]
members = [
    "util",
]
